deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak-angular-example
  namespace: crps-ui
  labels:
    app: keycloak-angular-example
    app.kubernetes.io/component: keycloak-angular-example
    app.kubernetes.io/instance: keycloak-angular-example
    app.kubernetes.io/name: keycloak-angular-example
    app.kubernetes.io/part-of: keycloak-angular-example-app
    app.openshift.io/runtime-namespace: crps-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-angular-example
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: keycloak-angular-example
        deployment: keycloak-angular-example
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      restartPolicy: Always
      serviceAccountName: crps-sa
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - name: keycloak-angular-example
          image: 'image-registry.openshift-image-registry.svc:5000/crps-ui/keycloak-angular-example@sha256:7abda1f2fc20bd7f5aea76afdaa53d87b8ab986b03a4195487d13132307b1768'
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      serviceAccount: crps-sa
      volumes:
        - name: nginx-config
          configMap:
            name: ngnx-conf
            defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600


--------------------------------------
kind: ConfigMap
apiVersion: v1
metadata:
  name: ngnx-conf
  namespace: crps-ui
data:
  nginx.conf: |-
    server {
        listen 80;
        server_name localhost;
        root /usr/share/nginx/html;
        index index.html index.html;             

        location / {
            try_files $uri $uri/ /index.html;
            proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_set_header X-Forwarded-Proto $scheme;
            proxy_set_header Host $host;
        }
    }

-----
kind: Service
apiVersion: v1
metadata:
  name: keycloak-angular-example
  namespace: crps-ui
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: keycloak-angular-example

--------
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak-angular-example
  namespace: crps-ui
spec:
  host: keycloak-angular-example-crps-ui.apps-crc.testing
  to:
    kind: Service
    name: keycloak-angular-example
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None

  ///////////////////////////////////////////////////////////////////////////
  Apache httpd frontend server
  #########################################################################3
  kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpd
  namespace: apache
  labels:
    app: httpd
    app.kubernetes.io/component: httpd
    app.kubernetes.io/instance: httpd
    app.kubernetes.io/name: httpd
    app.kubernetes.io/part-of: httpd-app
    app.openshift.io/runtime-namespace: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpd
        deployment: httpd
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      restartPolicy: Always
      serviceAccountName: apache-sa
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - name: httpd
          image: 'image-registry.openshift-image-registry.svc:5000/apache/httpd@sha256:cc4c94eb4e9c3d94ac2147cb9ce8057096362de83fa12b7aeecd4c0c3d5d1f21'
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: httpd-config
              mountPath: /usr/local/apache2/conf/httpd.conf
              subPath: httpd.conf
            - name: jpom-config
              mountPath: /usr/local/apache2/conf/extra/httpd-vhosts.conf
              subPath: httpd-vhosts.conf
            - name: jpom-config
              mountPath: /usr/local/apache2/conf/extra/httpd-ssl.conf
              subPath: httpd-ssl.conf
            - name: cert-volume
              mountPath: /etc/pki/tls/certs/tls.crt
              subPath: tls.crt
            - name: cert-volume
              mountPath: /etc/pki/tls/private/tls.key
              subPath: tls.key
            - name: cert-volume
              mountPath: /etc/pki/tls/certs/client.crt
              subPath: client.crt
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      serviceAccount: apache-sa
      volumes:
        - name: httpd-config
          configMap:
            name: httpd-config
            defaultMode: 420
        - name: jpom-config
          configMap:
            name: jpom-config
            defaultMode: 420
        - name: cert-volume
          secret:
            secretName: httpd-tls-secret
            defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

----
kind: Secret
apiVersion: v1
metadata:
  name: httpd-tls-secret
  namespace: apache
data:
  client.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXekNDQWtPZ0F3SUJBZ0lJWklDWWVCSkFKbVF3RFFZSktvWklodmNOQVFFTEJRQXdKakVrTUNJR0ExVUUKQXd3YmFXNW5jbVZ6Y3kxdmNHVnlZWFJ2Y2tBeE56UXlNVE0yT1RreE1CNFhEVEkxTURNeE5qRTBOVFl6TWxvWApEVEkzTURNeE5qRTBOVFl6TTFvd0hURWJNQmtHQTFVRUF3d1NLaTVoY0hCekxXTnlZeTUwWlhOMGFXNW5NSUlCCklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF5bERiTnk4Y3IvUUQrbTJ0TmNOK3BQNUQKejBvbXB6WTluQVZ0UDZON3pyQWZMdWNXSTg2dHViMGtTbWswM0tZbEl0V1lubFVzRXorZHJ5cUpkaGFqWWJYZQovTzVrQWcvci85QS [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURmakNDQW1ZQ0NRQ2w3VWpGSlhRV1Z6QU5CZ2txaGtpRzl3MEJBUXNGQURDQmdERUxNQWtHQTFVRUJoTUMKVFZreEN6QUpCZ05WQkFnTUFsTk1NUXN3Q1FZRFZRUUhEQUpMU2pFTE1Ba0dBMVVFQ2d3Q1NWUXhDekFKQmdOVgpCQXNNQWtsVU1Sc3dHUVlEVlFRRERCSXFMbUZ3Y0hNdFkzSmpMblJsYzNScGJtY3hJREFlQmdrcWhraUc5dzBCCkNRRVdFVzFoYkdGdE9EUkFaMjFoYVd3dVkyOXRNQjRYRFRJMU1EZ3dOakEzTXpVMU1Wb1hEVEkyTURnd05qQTMKTXpVMU1Wb3dnWUF4Q3pBSkJnTlZCQVlUQWsxWk1Rc3dDUVlEVlFRSURBSlRUREVMTUFrR0ExVUVCd3dDUzBveApDekFKQmdOVkJBb01Ba [...]
  tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb3dJQkFBS0NBUUVBMk8rcmY3WGNuY3ZmT1hXS1hxMEFzc092RnhFd1RNMWFlK3JxcFR2ZnlraVF2a0FvCjRaVTd5Z0traHNsSkpMdHRDVkozdElkVTlwTzdEM0pjRms4RmZscWtRdlpENnArUklJWXNoMFBSc2R4WkVOWVoKUjFmWFd4SGo3Rk9qV1hOdTM0dWNXZDdKcVlkVnpjL21IdE9Fc2pIb2o5MHdmT3JJV3VsclRJY2lCaGJjaUpIRgpobnN0V2ptNnEzVTRwQWM0NFp6QUttMFJMSDVHVWpVWjgySzlzSUtDN2NkNFEwb0tzOVlDRmo4LzJMeXRZcDFWCnFiUkV1Y0VBWnpObkc5eWhRNEkwS09qc0pCMkpHdFptV2I5QzJTbnprb2R4MGhvMlZ0aDM0dEhWc1R0S2JnMG0KRElEQjNUUXVCS [...]
type: Opaque


-----
kind: ConfigMap
apiVersion: v1
metadata:
  name: httpd-config
  namespace: apache
data:
  httpd.conf: "# This is the main Apache HTTP server configuration file.  It contains the\n# configuration directives that give the server its instructions.\n# See <URL:http://httpd.apache.org/docs/2.4/> for detailed information.\n# In particular, see \n# <URL:http://httpd.apache.org/docs/2.4/mod/directives.html>\n# for a discussion of each configuration directive.\n#\n# Do NOT simply read the instructions in here without understanding\n# what they do.  They're here only as hints or reminders.   [...]

------
kind: ConfigMap
apiVersion: v1
metadata:
  name: jpom-config
  namespace: apache
immutable: false
data:
  httpd-ssl.conf: |-
    [...]
  httpd-vhosts.conf: |-
    <VirtualHost *:80>

          ProxyPass / http://keycloak-angular-example.crps-ui.svc:80/
          ProxyPassReverse / http://keycloak-angular-example.crps-ui.svc:80/

          ErrorLog /usr/local/apache2/logs/error.log
          CustomLog /usr/local/apache2/logs/access.log combined

        </VirtualHost>

------
kind: Service
apiVersion: v1
metadata:
  name: httpd
  namespace: apache
spec:
  clusterIP: 10.217.5.64
  ipFamilies:
    - IPv4
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 10.217.5.64
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: httpd
    deployment: httpd
status:
  loadBalancer: {}


--------
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpd
  namespace: apache
spec:
  host: httpd-apache.apps-crc.testing
  to:
    kind: Service
    name: httpd
    weight: 100
  port:
    targetPort: 80-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None

--------
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-https
  namespace: apache
spec:
  host: route-https-apache.apps-crc.testing
  to:
    kind: Service
    name: httpd
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
  wildcardPolicy: None
